--- a/templates/home.html
+++ b/templates/home.html
@@ -15,12 +15,22 @@
         <th>ID</th>
         <th>Title</th>
         <th>Content (15 char)</th>
+        <th>Categories</th>
+        <th>Author ID</th>
+        <th>Author Username</th>
     </tr>
     {% for article in articles %}
     <tr>
         <td>{{ article.id }}</td>
         <td>{{ article.title }}</td>
-        <td>{{ article.content | truncatechars:15}}</td>
+        <td>{{ article.content | truncatechars:15 }}</td>
+        <td>
+            {% for category in article.categories.all %}
+                {{ category.title }},
+            {% endfor %}
+        </td>
+        <td>{{ article.author.id }}</td>
+        <td>{{ article.author.username }}</td>
     </tr>
     {% endfor %}
 </table>
